# Cortical_Encoder

./: Auditory_Memory_noise_CNN_VAE.ipynb  CorticalVAE_BioSTRF.ipynb  README.md  Runable_Auditory_Memory_noise_CNN_VAE.ipynb  config.py  extract_features.py  generate_stimuli.py  pyproject.toml
nsl_toolbox/: __init__.py  aud24.npy  aud24_old.npy  core.py
output/: experiment_metadata.npz  experiment_summary.json
